# EigenFlow

./: CMakeLists.txt  LICENSE  README.md
include/: NN.h  gradientDescentOptimizer.h  graph.h  lockingPtr.h  node.h  operation.h  session.h
src/: NN.tpp  gradientDescentOptimizer.cpp  gradientDescentOptimizer.tpp  graph.tpp  lockingPtr.tpp  main.cpp  node.cpp  node.tpp  operation.tpp  session.cpp  session.tpp
